--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ nwg-look/
 pulse/
 rofi/
 session/
+Thunar/accels.scm
+QuranCompanion
+kitty/theme.conf
+warp-terminal
+cava
+nushell/history.txt
+yazi/yazi.toml
