--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,4 +24,6 @@ mouse_map right press ungrabbed paste_from_selection
 include current-theme.conf
 # END_KITTY_THEME
 
+map ctrl+tab send_text all \x1b[1;5I
+map ctrl+shift+tab send_text all \x1b[1;6I
 cursor #a6e3a1
