--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@ bind-key -n M-5 select-window -t 5
 bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
-bind-key -n M-9 select-window -l
+bind-key -n M-\\ select-window -l
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -53,6 +53,7 @@ set -g @plugin 'omerxx/catppuccin-tmux'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'omerxx/tmux-floax'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 set -g @sessionx-bind 'o'
 set -g @catppuccin_window_left_separator ""
@@ -63,7 +64,7 @@ set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory date_time"
+set -g @catppuccin_status_modules_right "gitmux directory date_time pomodoro_plus"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
@@ -79,6 +80,12 @@ set -g @floax-bind '-n M-p'
 run '~/.config/tmux/plugins/tpm/tpm'
 
 bind-key -n M-l display-popup -h 24 -w 105 -b rounded -E -T LAZYGIT -d "#{pane_current_path}" lazygit
-bind-key u new-window -c "#{pane_current_path}" lazygit
-bind-key g new-window -c "#{pane_current_path}" btop
+bind-key u new-window -c "#{pane_current_path}" -n lazygit lazygit
+bind-key g new-window -c "#{pane_current_path}" -n btop btop
 bind-key a set status
+
+# Bind custom escape sequences in tmux
+bind -n S-Right next-window
+bind -n S-Left previous-window
+
+display-message -d 400 'Reloaded !!'
